Bug 15414 - "net offlinejoin provision" does not work as non-root user
Summary: "net offlinejoin provision" does not work as non-root user
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Tools (show other bugs)
Version: 4.18.3
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-04 12:02 UTC by Guenther Deschner
Modified: 2023-08-16 16:56 UTC (History)
2 users (show)

See Also:


Attachments
patch from master (1.50 KB, patch)
2023-07-05 10:20 UTC, Guenther Deschner
asn: review+
gd: ci-passed+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Guenther Deschner 2023-07-04 12:02:06 UTC
Currently "net offlinejoin provision" always tries to open the secrets.tdb, although it is not needed and it prevents "net offlinejoin provision" from succesfully running as non-root.
Comment 1 Samba QA Contact 2023-07-05 09:24:04 UTC
This bug was referenced in samba master:

bf7fbf7e2b675145e25ce7bffc29abbf44c35540
Comment 2 Guenther Deschner 2023-07-05 10:20:22 UTC
Created attachment 17970 [details]
patch from master
Comment 3 Andreas Schneider 2023-07-10 12:54:22 UTC
Jule, can you please apply the patch also to 4.18? Thanks!
Comment 4 Jule Anger 2023-07-19 15:11:27 UTC
Pushed to autobuild-v4-18-test.
Comment 5 Samba QA Contact 2023-07-19 16:24:12 UTC
This bug was referenced in samba v4-18-test:

5ac859e96e83566c7748b6247770fde90fd694a7
Comment 6 Jule Anger 2023-07-21 12:05:23 UTC
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2023-08-16 16:56:58 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.6):

5ac859e96e83566c7748b6247770fde90fd694a7